--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,11 +6,12 @@ span {
 body {
     background-color: darkgrey;
     -webkit-animation:mymove 5s infinite;
-    animation: mymove 30s ;}
+    animation: mymove 25s ;}
 @-webkit-keyframes mymove{
     from{background-color:lightgrey;}
-    to {background-color:darkgrey;}
+    to {background-color:black;}
 }
+/* slowly get blacker over the course of game, sped up for demo purposes */
 /*
 body {
     background: #133fff;
